v2.6.2 (Tests fixed)